# GramUp

./: .gitignore  .pylintrc  MANIFEST.in  README.md  SECURITY.md  backup.py  build.sh  commit.sh  constants.py  login.py  main.py  requirements.txt  restore.py  run.sh  setup.cfg  setup.py  utils.py
.github/: CONTRIBUTING.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: contributing.md
.github/workflows/: Build.yml  build.yml  codeql-analysis.yml  codesee-arch-diagram.yml  greetings.yml  main.yml  pylint.yml  python-publish.yml
GramUp/: backup.py  login.py  main.py  restore.py
docs/login/: get_chat_id.md  load_data.md  login.md  try_login_with_code.md
gramup/: __init__.py  __main__.py  backup.py  constants.py  help.py  login.py  main.py  models.py  restore.py  search.py  settings.py  tasks.py  utils.py
gramup/static/: manifest.json
gramup/static/css/: files.css  login.css
gramup/static/js/: index.js  login.js  sw.js
gramup/static/pwa/: icons.json
gramup/templates/: files.html  login.html
src/: backup.py
