[metadata]
name = gramup
version = 0.0.1
url = https://github.com/rohittp0/GramUp
author = Rohit T P
author_email = tprohit9@gmail.com
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Affero General Public License v3
    Operating System :: OS Independent
description = A utility to use Telegram as a backup solution.
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >=3.6
